# esp32s31_korvo1

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PROJECT.md  PROJECT_REQUIREMENTS.md  README.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md  esp32_debug_workflow.md
components/captive_dns/: captive_dns.c
components/esp-brookesia/hal/brookesia_hal_adaptor/: Kconfig  idf_component.yml  idf_component.yml.bak
components/esp-brookesia/hal/brookesia_hal_boards/: idf_component.yml
components/esp-brookesia/hal/brookesia_hal_boards/boards/espressif/esp32_s31_korvo1/: board_devices.yaml
components/esp-brookesia/service/network/brookesia_service_wifi/: CMakeLists.txt  idf_component.yml
components/gen_bmgr_codes/: CMakeLists.txt  Kconfig.projbuild  board_manager.defaults  gen_board_metadata.yaml  idf_component.yml
components/shine_encoder/: CMakeLists.txt  bitstream.c  idf_component.yml  layer3.h
components/ulog/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  ulog_writer.cpp
components/ulog/include/: ulog_messages.h  ulog_writer.h
components/uorb/: CMakeLists.txt  README.md  idf_component.yml  uorb.c
components/uorb/include/: uorb.h
components/wifi_manager/: idf_component.yml  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
doc/: esp32s31_korvo1_hardware_info.md  esp_elenixos.md
main/: CMakeLists.txt  Kconfig.projbuild  app_config.h  app_video.c  app_video.h  brookesia_app.cpp  brookesia_app.hpp  brookesia_integration.cpp  example_config.h  idf_component.yml  lvgl_psram_mem.h  main.cpp  topics.h  web_config_server.cpp  web_config_server.hpp  wifi_service.cpp  wifi_service.hpp
main/drivers/audio/: audio_driver.cpp  audio_driver.hpp  audio_ulog_recorder.cpp  audio_ulog_recorder.hpp
main/drivers/bt_audio/: bt_audio_driver.cpp  bt_audio_driver.hpp
main/drivers/buttons/: button_driver.cpp  button_driver.hpp
main/drivers/camera/: camera_app.cpp  camera_app.hpp  camera_driver.cpp  camera_driver.hpp
main/drivers/display/: display_driver.cpp  display_driver.hpp
main/drivers/led/: led_driver.cpp  led_driver.hpp
main/drivers/sdcard/: sdcard_driver.cpp  sdcard_driver.hpp
main/drivers/system_monitor/: system_monitor.cpp  system_monitor.hpp
main/logger/: logger.cpp  logger.hpp
proto/: audio_frame.msg  audio_level.msg  camera_frame.msg  camera_state.msg  fps_stats.msg  recording_state.msg  system_alert.msg  system_stats.msg  ulog_state.msg  volume_state.msg  wifi_state.msg
tests/: conftest.py  requirements.txt  test_audio.py  test_files.py  test_system.py  test_ulog.py  test_wifi.py  test_z_ulog_audio_camera.py
tools/: esp32_debug.sh  msg_gen.py  ulog_audio_extract.py  ulog_to_video.py
